Implemented bulk notification
