# webapp/docs/swagger.json
@@ -10,6 +10,42 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/bulk-notifications": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Create Bulk Notifications",
+                "parameters": [
+                    {
+                        "description": "description",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.BulkNotificationBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Notification"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/notifications": {
             "get": {
                 "consumes": [
@@ -68,6 +104,23 @@
         }
     },
     "definitions": {
+        "api.BulkNotificationBody": {
+            "type": "object",
+            "properties": {
+                "notification_mode": {
+                    "type": "string"
+                },
+                "notification_text": {
+                    "type": "string"
+                },
+                "user_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "api.NotificationPostBody": {
             "type": "object",
             "properties": {
